# nox

./: .gitignore  AGENT.MD  CLAUDE.md  CONTRIBUTING.md  README.md  create_issues.sh  package-lock.json  restart_servers.sh
.claude/: launch.json
.github/workflows/: main.yml
docs/: API_CHANGELOG.md
infra/db/: apply.js  schema.sql  seed.js  seed_chat.js
playwright-report-2/: index.html
services/bifrost/: go.mod  go.sum  seed_test_users.go
services/bifrost/scripts/: seed_test_user.go
services/orchestrator/: Cargo.toml  build.rs
services/orchestrator/src/: auth.rs  grpc.rs  main.rs
services/tracemem/: package-lock.json  package.json
ui/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
ui/e2e/: auth-helper.ts  auth_regression.spec.ts  channel_crud.spec.ts  dashboard_layout.spec.ts  dm.spec.ts  enhanced_messaging.spec.ts  forwarding.spec.ts  friends.spec.ts  indicators.spec.ts  invitations.spec.ts  message_edits.spec.ts  messaging_crud.spec.ts  messaging_regression.spec.ts  org_settings.spec.ts  org_switching.spec.ts  password_reset.spec.ts  pin_bookmark.spec.ts  presence.spec.ts  private_channel_members.spec.ts  rbac.spec.ts  reactions.spec.ts  reads.spec.ts  reply.spec.ts  thread_regression.spec.ts  user_profile.spec.ts  utils.ts
ui/playwright-report/: index.html
ui/playwright-report-ci/: index.html
ui/public/: manifest.json
ui/src/: App.tsx  index.css
ui/src/hooks/: useKeyboardShortcuts.ts  useWebSocket.ts
ui/src/stores/: authStore.ts  categoryStore.ts  channelStore.ts  friendStore.ts  (+11 more)
(+106 files in other folders)
