[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = "0.4"
ed25519-dalek = "2.2.0"
rand = "0.10.0"
hex = "0.4.3"

[build-dependencies]
tonic-build = "0.12"
